--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es2022",
+        "target": "es5",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "module": "commonjs",
         "rootDir": "./",
         "baseUrl": "./src",
-        "outDir": "./dist",
         "paths": {
             "@modules/*": ["modules/*"],
             "@config/*": ["config/*"],
@@ -12,11 +13,12 @@
             "@errors/*": ["errors/*"],
             "@utils/*": ["utils/*"]
         },
+        "resolveJsonModule": true,
+        "outDir": "./dist",
         "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "skipLibCheck": true,
+        "strictPropertyInitialization": false,
         "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true
+        "strict": true,
+        "skipLibCheck": true
     }
 }
