--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
         "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
+        "test:clean": "jest --clearCache ",
         "test:dev": "jest --watch --passWithNoTests",
         "seed:admin": "ts-node-dev -r tsconfig-paths/register  src/shared/infra/typeorm/seed/admin.ts"
     },
@@ -35,7 +36,7 @@
         "supertest": "^6.1.3",
         "swagger-ui-express": "^4.1.6",
         "tsyringe": "^4.6.0",
-        "typeorm": "^0.2.38",
+        "typeorm": "^0.2.31",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
@@ -72,4 +73,3 @@
         "typescript": "^4.6.2"
     }
 }
-
