--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-        "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
+        "test": "jest --runInBand --detectOpenHandles",
         "test:clean": "jest --clearCache ",
         "test:dev": "jest --watch --passWithNoTests",
         "seed:admin": "ts-node-dev -r tsconfig-paths/register  src/shared/infra/typeorm/seed/admin.ts"
@@ -56,7 +56,8 @@
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
         "ascii-art": "^2.8.5",
-        "eslint": "^8.11.0",
+        "eslint": "^8.11.0",        
+        "eslint-plugin-import-helpers": "^1.2.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^2.5.0",
