chore: add http2 and https

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "rate-limiter-flexible": "^2.2.1",
         "redis": "^3.1.0",
         "reflect-metadata": "^0.1.13",
-        "supertest": "^6.2.2",
+        "spdy": "^4.0.2",
         "swagger-ui-express": "^4.1.6",
         "tsyringe": "^4.6.0",
         "typeorm": "^0.2.5",
@@ -56,18 +56,21 @@
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
         "ascii-art": "^2.8.5",
-        "eslint": "^8.11.0",        
-        "eslint-plugin-import-helpers": "^1.2.1",
+        "eslint": "^8.11.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import-helpers": "^1.2.1",
         "eslint-plugin-prettier": "^4.0.0",
         "git-commit-msg-linter": "^4.1.1",
         "husky": "^7.0.4",
         "jest": "^27.5.1",
+        "jest-sonar-reporter": "^2.0.0",
         "lint-staged": "^12.3.7",
         "prettier": "^2.6.0",
+        "sonarqube-scanner": "^2.8.1",
+        "supertest": "^6.2.2",
         "ts-jest": "^27.1.3",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths": "^3.14.0",
