--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
+    "private": true,
+    "engines": {
+        "npm": ">=8.5.0",
+        "node": ">=16.14.2"
+    },
     "scripts": {
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
