--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
 	},
 	"scripts": {
 		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn ./src/index.ts",
 		"test": "jest --runInBand --detectOpenHandles",
 		"test:clean": "jest --clearCache ",
 		"test:dev": "jest --watch --passWithNoTests",
 		"seed:admin": "ts-node-dev -r tsconfig-paths/register  src/shared/infra/typeorm/seed/admin.ts",
+		"start": "node ./dist/index.js",
 		"lint": "eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"build": "tsc -p tsconfig.build.json"
 	},
 	"dependencies": {
-		"@sentry/node": "^6.19.4",
-		"@sentry/tracing": "^6.19.4",
+		"@sentry/node": "^6.19.6",
+		"@sentry/tracing": "^6.19.6",
 		"@types/ascii-art": "^1.4.0",
-		"aws-sdk": "^2.882.0",
+		"aws-sdk": "^2.1110.0",
 		"bcrypt": "^5.0.1",
-		"class-transformer": "^0.4.0",
+		"class-transformer": "^0.5.1",
 		"cors": "^2.8.5",
 		"csv-parse": "^4.15.3",
 		"dayjs": "^1.10.4",
-		"dotenv": "^8.2.0",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
 		"handlebars": "^4.7.7",
