--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,11 +30,11 @@
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-			"@modules/*": ["./src/modules/*"],
-			"@config/*": ["./src/config/*"],
-			"@shared/*": ["./src/shared/*"],
-			"@errors/*": ["./src/errors/*"],
-			"@utils/*": ["./src/utils/*"]
+			"@modules/*": ["./src/modules/*", "./dist/modules/*"],
+			"@config/*": ["./src/config/*", "./dist/config/*"],
+			"@shared/*": ["./src/shared/*", "./dist/shared/*"],
+			"@errors/*": ["./src/errors/*", "./dist/errors/*"],
+			"@utils/*": ["./src/utils/*", "./dist/utils/*"]
 		} 
     /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
