--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
 		"@typescript-eslint/no-misused-new": "error",
 		"@typescript-eslint/no-shadow": ["error"],
 		"@typescript-eslint/lines-between-class-members": "error",
-		"@typescript-eslint/no-misused-promises": "error"
+		"@typescript-eslint/no-misused-promises": "error",
+		"@typescript-eslint/consistent-type-imports": "error"
 	}
 }
