--- a/package.json
+++ b/package.json
@@ -1,87 +1,85 @@
 {
-	"name": "currencies",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"private": true,
-	"engines": {
-		"npm": ">=8.5.0",
-		"node": ">=16.14.2"
-	},
-	"scripts": {
-		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-		"dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ./src/index.ts",
-		"test": "jest --runInBand --detectOpenHandles",
-		"test:clean": "jest --clearCache ",
-		"test:dev": "jest --watch --passWithNoTests",
-		"seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts",
-		"start": "node ./dist/index.js",
-		"lint": "eslint .",
-		"format": "prettier --write .",
-		"build": "tsc -p tsconfig.build.json"
-	},
-	"dependencies": {
-		"@sentry/node": "^6.19.6",
-		"@sentry/tracing": "^6.19.6",
-		"@types/ascii-art": "^1.4.0",
-		"aws-sdk": "^2.1127.0",
-		"bcrypt": "^5.0.1",
-		"class-transformer": "^0.5.1",
-		"cors": "^2.8.5",
-		"csv-parse": "^5.0.4",
-		"dayjs": "^1.11.1",
-		"dotenv": "^16.0.0",
-		"express": "^4.18.1",
-		"express-async-errors": "^3.1.1",
-		"handlebars": "^4.7.7",
-		"jsonwebtoken": "^8.5.1",
-		"mime": "^3.0.0",
-		"multer": "^1.4.2",
-		"nodemailer": "^6.5.0",
-		"pg": "^8.7.3",
-		"rate-limiter-flexible": "^2.2.1",
-		"redis": "^4.0.6",
-		"reflect-metadata": "^0.1.13",
-		"spdy": "^4.0.2",
-		"swagger-ui-express": "^4.1.6",
-		"tslib": "^2.4.0",
-		"tsyringe": "^4.6.0",
-		"typeorm": "^0.2.5",
-		"uuid": "^8.3.2"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.0",
-		"@types/cors": "^2.8.10",
-		"@types/express": "^4.17.13",
-		"@types/jest": "^27.4.1",
-		"@types/jsonwebtoken": "^8.5.1",
-		"@types/mime": "^2.0.3",
-		"@types/multer": "^1.4.5",
-		"@types/node": "^17.0.31",
-		"@types/nodemailer": "^6.4.1",
-		"@types/redis": "^4.0.11",
-		"@types/spdy": "^3.4.5",
-		"@types/supertest": "^2.0.12",
-		"@types/swagger-ui-express": "^4.1.2",
-		"@types/uuid": "^8.3.0",
-		"@typescript-eslint/eslint-plugin": "^5.20.0",
-		"@typescript-eslint/parser": "^5.20.0",
-		"ascii-art": "^2.8.5",
-		"eslint": "^8.14.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"git-commit-msg-linter": "^4.1.2",
-		"husky": "^7.0.4",
-		"jest": "^27.5.1",
-		"jest-sonar-reporter": "^2.0.0",
-		"json5": "^2.2.1",
-		"lint-staged": "^12.4.0",
-		"prettier": "^2.6.2",
-		"sonarqube-scanner": "^2.8.1",
-		"supertest": "^6.2.2",
-		"ts-jest": "^27.1.4",
-		"ts-node-dev": "^1.1.8",
-		"tsconfig-paths": "^3.14.1",
-		"typescript": "^4.6.3"
-	}
+    "name": "currencies",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "private": true,
+    "engines": {
+        "npm": ">=8.5.0",
+        "node": ">=16.14.2"
+    },
+    "scripts": {
+        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ./src/index.ts",
+        "test": "jest --runInBand --detectOpenHandles",
+        "test:clean": "jest --clearCache ",
+        "test:dev": "jest --watch --passWithNoTests",
+        "start": "node ./dist/index.js",
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "build": "tsc -p tsconfig.build.json"
+    },
+    "dependencies": {
+        "aws-sdk": "^2.1127.0",
+        "bcrypt": "^5.0.1",
+        "class-transformer": "^0.5.1",
+        "cors": "^2.8.5",
+        "csv-parse": "^5.0.4",
+        "dayjs": "^1.11.1",
+        "dotenv": "^16.0.0",
+        "express": "^4.18.1",
+        "express-async-errors": "^3.1.1",
+        "handlebars": "^4.7.7",
+        "jsonwebtoken": "^8.5.1",
+        "mime": "^3.0.0",
+        "multer": "^1.4.2",
+        "nodemailer": "^6.5.0",
+        "pg": "^8.7.3",
+        "rate-limiter-flexible": "^2.2.1",
+        "redis": "^4.0.6",
+        "reflect-metadata": "^0.1.13",
+        "spdy": "^4.0.2",
+        "swagger-ui-express": "^4.1.6",
+        "tslib": "^2.4.0",
+        "tsyringe": "^4.6.0",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "@sentry/node": "^6.19.6",
+        "@sentry/tracing": "^6.19.6",
+        "@types/ascii-art": "^1.4.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.10",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.4.1",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/mime": "^2.0.3",
+        "@types/multer": "^1.4.5",
+        "@types/node": "^17.0.31",
+        "@types/nodemailer": "^6.4.1",
+        "@types/pg": "^8.6.5",
+        "@types/redis": "^4.0.11",
+        "@types/spdy": "^3.4.5",
+        "@types/supertest": "^2.0.12",
+        "@types/swagger-ui-express": "^4.1.2",
+        "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.20.0",
+        "@typescript-eslint/parser": "^5.20.0",
+        "ascii-art": "^2.8.5",
+        "eslint": "^8.14.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "git-commit-msg-linter": "^4.1.2",
+        "husky": "^7.0.4",
+        "jest": "^27.5.1",
+        "jest-sonar-reporter": "^2.0.0",
+        "json5": "^2.2.1",
+        "lint-staged": "^12.4.0",
+        "prettier": "^2.6.2",
+        "sonarqube-scanner": "^2.8.1",
+        "supertest": "^6.2.2",
+        "ts-jest": "^27.1.4",
+        "ts-node-dev": "^1.1.8",
+        "tsconfig-paths": "^3.14.1",
+        "typescript": "^4.6.3"
+    }
 }
